<resources>
    <string name="app_name">Yuyuan</string>
    <string name="btn_continue">CONTINUE</string>
    <string name="lessons">Lessons</string>
    <string name="unit1">Ordering Food</string>
    <string name="more">more</string>
    <string name="unit1_lesson1">Ordering latte</string>
    <string name="level_pre_intermediate">\t Pre Intermediate\t\t</string>
    <string name="unit1_lesson1_progress">0/5</string>
    <string name="unit1_lesson2">Complaint in a restaurant</string>
    <string name="level_intermediate">\t Intermediate\t\t</string>
    <string name="unit1_lesson2_progress">0/4</string>
    <string name="unit1_lesson3">Waiting for the change</string>
    <string name="level_beginner">\t Beginner\t\t</string>
    <string name="unit1_lesson3_progress">0/5</string>
    <string name="unit2">Travel</string>
    <string name="unit2_lesson1">Hot Summer</string>
    <string name="unit2_lesson1_progress">0/5</string>
    <string name="unit2_lesson2">\"We\" in Chinese</string>
    <string name="unit2_lesson2_progress">0/4</string>
    <string name="unit2_lesson3">Travelling during the\npandemic</string>
    <string name="unit2_lesson3_progress">0/4</string>
    <string name="unit3">Transport</string>
    <string name="unit3_lesson1">Where is the subway\nstation?</string>
    <string name="unit3_lesson1_progress">0/5</string>
    <string name="unit3_lesson2">Your luggage is overweight</string>
    <string name="unit3_lesson2_progress">0/4</string>
    <string name="unit3_lesson3">My flight got delayed</string>
    <string name="unit3_lesson3_progress">0/4</string>
    <string name="about_title">About</string>
    <string name="current_version">Current version</string>
    <string name="current_version_code">1.0.0</string>
    <string name="version_update">Version update</string>
    <string name="join_us">Join us</string>
    <string name="my_profile_title">My profile</string>
    <string name="name">Name</string>
    <string name="default_user_name">User</string>
    <string name="age">Age</string>
    <string name="not_set">not set</string>
    <string name="default_to_learn_count">new 40</string>
    <string name="default_re_review_count">review 35</string>
    <string name="default_top_meaning">I; me; I; me; I</string>
    <string name="default_pinyin">wo</string>
    <string name="default_char">我</string>
    <string name="default_meaning">I; me</string>
    <string name="skip">Skip</string>
    <string name="btn_practise">PRACTISE</string>
    <string name="default_sentence">今天我遇到了一匹狼。</string>
    <string name="default_trans">Today I met a fierce wolf.</string>
    <string name="tip">Tip</string>
    <string name="settings_title">Settings</string>
    <string name="my_profile">My profile</string>
    <string name="learning_settings">Learning Settings</string>
    <string name="audio_speed">Audio speed</string>
    <string name="default_audio_speed">1.0x</string>
    <string name="sound_effects">Sound effects</string>
    <string name="listen_and_choose">Listen and choose</string>
    <string name="character_exercises">Character exercises</string>
    <string name="reset_learning_progress">Reset learning progress</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="radical">radical</string>
    <string name="default_radical">test</string>
    <string name="example_sentence">Example sentence</string>
    <string name="default_book">HSK1</string>
    <string name="change_book"><![CDATA[change >]]></string>
    <string name="default_book_progress">125 / 500</string>
    <string name="default_days_left">2 days left</string>
    <string name="daily_plan">Daily Plan</string>
    <string name="to_learn">To learn</string>
    <string name="default_to_learn_num">87</string>
    <string name="to_review">To review</string>
    <string name="default_to_review_num">46</string>
    <string name="btn_start_to_learn">Start to Learn!</string>
    <string name="train">Train</string>
    <string name="starred">Starred</string>
    <string name="read">Read</string>
    <string name="listen">Listen</string>
    <string name="learnt">Learnt</string>
    <string name="default_learnt_num">1292</string>
    <string name="total">, Total</string>
    <string name="default_total_num">365</string>
    <string name="days">days</string>
    <string name="my_classes">My classes</string>
    <string name="my_books">My books</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="calendar_title">Calendar</string>
    <string name="plan_finished">Today\'s plan Finished</string>
    <string name="default_calendar_month">Aug</string>
    <string name="default_calendar_date">August 10th</string>
</resources>