<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="7">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/font_helvetica"
        android:gravity="center"
        android:text="@string/sun"
        android:textColor="@color/calendar_legend_gray"
        android:textSize="13sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/font_helvetica"
        android:gravity="center"
        android:text="@string/mon"
        android:textColor="@color/calendar_legend_gray"
        android:textSize="13sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/font_helvetica"
        android:gravity="center"
        android:text="@string/tue"
        android:textColor="@color/calendar_legend_gray"
        android:textSize="13sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/font_helvetica"
        android:gravity="center"
        android:text="@string/wed"
        android:textColor="@color/calendar_legend_gray"
        android:textSize="13sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/font_helvetica"
        android:gravity="center"
        android:text="@string/thu"
        android:textColor="@color/calendar_legend_gray"
        android:textSize="13sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/font_helvetica"
        android:gravity="center"
        android:text="@string/fri"
        android:textColor="@color/calendar_legend_gray"
        android:textSize="13sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/font_helvetica"
        android:gravity="center"
        android:text="@string/sat"
        android:textColor="@color/calendar_legend_gray"
        android:textSize="13sp" />
</LinearLayout>