<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light_gray">

    <LinearLayout
        android:id="@+id/ll_quiz_character_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_quiz_char_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/baseline_arrow_back_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_quiz_char_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_to_learn_count"
                android:textSize="10sp"/>

            <TextView
                android:id="@+id/tv_quiz_char_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_re_review_count"
                android:textSize="10sp"/>
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:background="@color/black" />

        <ImageView
            android:id="@+id/iv_quiz_char_top_tick"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_tick_grey" />

        <TextView
            android:id="@+id/tv_quiz_char_top_meaning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/default_top_meaning" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_quiz_character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/ll_quiz_character_top">

        <TextView
            android:id="@+id/tv_quiz_character_pinyin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_pinyin"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_quiz_character_char"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/tv_quiz_character_pinyin"
            android:text="@string/default_char"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_quiz_character_meaning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_quiz_character_pinyin"
            android:text="@string/default_meaning"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_quiz_char_audio"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_sound_blue" />
    </RelativeLayout>

    <WebView
        android:id="@+id/webview_quiz"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="15dp"
        android:background="@color/common_gray"
        android:backgroundTint="@color/common_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_quiz_character" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_quiz_char_skip"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:gravity="center"
            android:textSize="16sp" />
        <Button
            android:id="@+id/btn_quiz_char_practice"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_practise"
            android:textAllCaps="true"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>