<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light_gray">

    <RelativeLayout
        android:id="@+id/rl_show_answer_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_show_answer_char"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_char"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/iv_show_answer_star"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_star_grey" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_show_answer_meaning_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/rl_show_answer_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_show_answer_pinyin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_pinyin" />

            <ImageView
                android:id="@+id/iv_show_answer_pinyin_play"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_sound_blue" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_show_answer_meaning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_meaning"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/ll_show_answer_radical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radical" />

            <TextView
                android:id="@+id/tv_show_answer_radical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/default_radical" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view_show_answer_1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ll_show_answer_meaning_section" />

    <LinearLayout
        android:id="@+id/ll_show_answer_sentence_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/view_show_answer_1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_sentence"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/ll_show_answer_examlpe_sentence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="end"
            android:orientation="horizontal">

            <com.chotix.yuyuan.pinyin.PinyinTextView
                android:id="@+id/tv_show_answer_sentence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                app:customColor="@color/purple_700"
                app:customTextSize="15sp" />

            <ImageView
                android:id="@+id/iv_show_answer_sentence_audio"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_sound_blue" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_show_answer_sentence_trans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_trans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_show_answer_skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/skip"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_show_answer_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/btn_continue"
            android:textAllCaps="true" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>