<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light_gray">

    <RelativeLayout
        android:id="@+id/rl_setting_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_setting_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/settings_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_setting_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/card_bg"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/rl_setting_top_bar">

        <TextView
            android:id="@+id/tv_setting_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_helvetica"
            android:text="@string/my_profile"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:src="@drawable/baseline_chevron_right_24_black" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_setting_learning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/card_bg"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/rl_setting_profile">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingBottom="15dp"
            android:text="@string/learning_settings"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/font_helvetica" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_divider_white" />

        <RelativeLayout
            android:id="@+id/rl_setting_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio_speed"
                android:fontFamily="@font/font_helvetica"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_setting_arrow_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:src="@drawable/baseline_chevron_right_24_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/iv_setting_arrow_audio"
                android:text="@string/default_audio_speed"
                android:fontFamily="@font/font_regular"
                android:textColor="@color/gray_light"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound_effects"
                android:fontFamily="@font/font_helvetica"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:checked="true" />
        </RelativeLayout>
        <View
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_divider_white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listen_and_choose"
                android:fontFamily="@font/font_helvetica"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:checked="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_exercises"
                android:textColor="@color/black"
                android:fontFamily="@font/font_helvetica"
                android:textSize="16sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:checked="true" />
        </RelativeLayout>
        <View
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_divider_white" />
        <RelativeLayout
            android:id="@+id/rl_setting_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_learning_progress"
                android:textColor="@color/black"
                android:fontFamily="@font/font_helvetica"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:src="@drawable/baseline_chevron_right_24_black" />

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_setting_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/card_bg"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/ll_setting_learning">

        <TextView
            android:id="@+id/tv_setting_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:textColor="@color/black"
            android:fontFamily="@font/font_helvetica"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:src="@drawable/baseline_chevron_right_24_black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_setting_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/card_bg"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/rl_setting_feedback">

        <TextView
            android:id="@+id/tv_setting_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_helvetica"
            android:text="@string/about"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:src="@drawable/baseline_chevron_right_24_black" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>